src/parser/snapshots/monkey_rust__parser__tests__parse_expression_statement_integer_literal.snap
---
source: src/parser/mod.rs
expression: program.nodes
---
- Expression:
    Literal:
      Int: 3

