src/parser/snapshots/monkey_rust__parser__tests__parse_grouped_expression.snap
---
source: src/parser/mod.rs
expression: program.nodes
---
- Expression:
    Mul:
      lhs:
        Add:
          lhs:
            Literal:
              Int: 5
          rhs:
            Literal:
              Int: 5
      rhs:
        Literal:
          Int: 5
- Expression:
    Oposite:
      Add:
        lhs:
          Literal:
            Int: 5
        rhs:
          Literal:
            Int: 5

