src/parser/snapshots/monkey_rust__parser__tests__parse_if_expression.snap
---
source: src/parser/mod.rs
expression: program.nodes
---
- Expression:
    If:
      condition:
        Lt:
          lhs:
            Identifier: x
          rhs:
            Identifier: y
      consequence:
        - Return:
            Identifier: x
      alternative: ~

