src/parser/snapshots/monkey_rust__parser__tests__parse_return_statement.snap
---
source: src/parser/mod.rs
expression: program.nodes
---
- Return:
    Literal:
      Int: 5
- Return:
    Literal:
      Int: 10
- Return:
    Literal:
      Int: 993322

